--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
     "phaser": "^3.55.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
+    "redux": "^4.2.1",
     "socket.io-client": "^4.6.0",
     "sockjs": "^0.3.24",
     "styled-components": "^5.3.6",
