--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "dongwoo <kimdongwoo0930@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "socket.io": "^4.6.0"
